--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-netlify-cms": "^4.1.13",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-remark-copy-linked-files": "^2.0.9",
